# psutil

./: .cirrus.yml  .clang-format  .coveragerc  .dprint.jsonc  .flake8  .git-pre-commit  .gitattributes  .gitignore  .isort.cfg  .travis.yml  .uncrustify.cfg  BUILDING  CONTRIBUTING.md  CREDITS  DEVGUIDE.rst  FAILED_TESTS  HISTORY  HISTORY.rst  IDEAS  INSTALL  INSTALL.rst  LICENSE  MANIFEST  MANIFEST.in  Makefile  README  README.rst  SECURITY.md  SUPPORTERS.rst  TODO  _bootstrap.py  appveyor.yml  cibuildwheel.toml  compile_commands.json  make.bat  pyproject.toml  setup.py  tox.ini
.ci/: README
.ci/appveyor/: download_exes.py  install.ps1  run_with_compiler.cmd
.ci/travis/: README  install.sh  run.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  lock.yml  no-response.yml
.github/ISSUE_TEMPLATE/: -os--bug-description.md  bug.md  config.yml  enhancement.md
.github/workflows/: bsd.yml  build.yml  build_wheel.yml  build_wheels.yml  changelog_bot.py  changelog_bot.yml  ci.yml  codeql.yml  docs.yml  freebsd.yml  issue_bot.yml  issue_labels.yml  issues.py  issues.yml  linux-macos-win.yml  linux.yml  macos.yml  source.yml  sunos.yml  triage_bot.py  triage_bot.yml  windows.yml
.travis/: run.sh
demo/: psgui.py
docs/: .readthedocs.yaml  404.rst  BUILDING.txt  DEVGUIDE.rst  DEVNOTES  DEVNOTES.md  Makefile  README  README.md  STATS.md  _globals.rst  _links.rst  _sponsors.html  about.rst  adoption.rst  alternatives.rst  api-overview.rst  api.rst  auto-build.sh  blog.rst  changelog.rst  class_diagram.dia  cli_equivalents.rst  conf.py  credits.rst  devguide.rst  documentation.html  faq.rst  funding.rst  glossary.rst  index.html  index.rst  install.rst  make.bat  migration.rst  milestones.lnk.html  performance.rst  platform.rst  platforms.rst  recipes.rst  (+9 more)
docs/_ext/: ablog_extras.py  add_home_link.py  availability.py  changelog_anchors.py  check_python_syntax.py  field_role.py  genindex_filter.py  giscus.py  glossary_toc.py  notfound_extras.py  opengraph_override.py  post_banner.py  proc_role.py  substitutions.py
docs/_extra/: robots.txt
docs/_static/: highlight-numbers.js  sidebar.js
docs/_static/css/: admonitions.css  api-signatures.css  base.css  blog.css  code.css  comments.css  custom.css  dev-banner.css  doc-icons.css  fontawesome.css  fonts.css  footer.css  giscus.css  home.css  layout.css  left-sidebar.css  prev-next.css  print.css  right-sidebar.css  right-toc.css  search.css  tables.css  topbar.css  typography.css
docs/_static/fonts/: README.txt
docs/_template/: globaltoc.html  indexcontent.html  indexsidebar.html  page.html
docs/_templates/: breadcrumbs.html  comments.html  dev-banner.html  footer.html  globaltoc.html  layout.html  prev-next.html  right-toc.html  search.html  searchbox.html  sidebar.html  toc.html  topbar.html
examples/: disk_usage.py  free.py  ifconfig.py  iotop.py  killall.py  meminfo.py  netstat.py  nettop.py  pidof.py  pmap.py  process_detail.py  ps.py  pstree.py  top.py  who.py
psutil/: DEVNOTES  NTProcessInfo.cpp  NTProcessInfo.h  TODO.aix  __init__.py  _common.py  _compat.py  _constants.py  _enums.py  _error.py  _exceptions.py  _ntuples.py  _posix.py  _psaix.py  _psbsd.py  _pscygwin.py  _psgnu.py  _pshaiku.py  _psibmi.py  _pslinux.py  _psmacos.py  _psmswindows.py  _psosx.py  _psposix.py  _pssunos.py  _psutil.py  _psutil_aix.c  _psutil_aix.h  _psutil_bsd.c  _psutil_bsd.h  _psutil_common.c  _psutil_common.h  _psutil_cygwin.c  _psutil_gnu.c  _psutil_haiku.cpp  _psutil_ibmi.c  _psutil_linux.c  _psutil_linux.h  _psutil_macos.c  _psutil_mswindows.c  (+24 more)
psutil/test/: __init__.py  memleak.py
psutil/tests/: README.rst  __init__.py  __main__.py  runner.py  test_aix.py  test_bsd.py  test_connections.py  test_contracts.py  test_linux.py  test_macos.py  test_memleaks.py  test_memory_leaks.py  test_misc.py  test_osx.py  test_posix.py  test_process.py  test_process_all.py  test_process_watcher.py  test_scripts.py  test_sudo.py  test_sunos.py  test_system.py  test_testutils.py  test_unicode.py  test_windows.py
scripts/: battery.py  cpu_distribution.py  disk_usage.py  fans.py  forkstat.py  free.py  ifconfig.py  iotop.py  killall.py  meminfo.py  netstat.py  nettop.py  pidof.py  pmap.py  process_detail.py  procinfo.py  procsmem.py  ps.py  pslisten.py  pstree.py  sensors.py  system-trace.py  temperatures.py  top.py  who.py  wifimon.py  winservices.py
scripts/internal/: .git-pre-commit  README  _mirror.py  bench_oneshot.py  bench_oneshot_2.py  bench_win_loadlib.py  check_broken_links.py  clinter.py  convert_readme.py  download_exes.py  download_wheels.py  download_wheels_appveyor.py  download_wheels_github.py  find_adopters.py  find_broken_links.py  fix_flake8.py  generate_manifest.py  git_pre_commit.py  github_issue_bot.py  install-sysdeps.sh  install_pip.py  md5_dist.py  md5sum.py  new_blog_post.py  print_access_denied.py  print_announce.py  print_api_speed.py  print_dist.py  print_downloads.py  print_hashes.py  print_sysinfo.py  print_timeline.py  print_wheels.py  procs_access_denied.py  purge_installation.py  refresh_adoption_stats.py  rst_check_dead_refs.py  rst_unused_targets.py  scriptutils.py  test_python2_setup_py.py  (+3 more)
src/psutil/: _psutil_aix.c  _psutil_bsd.c  _psutil_posix.c  _psutil_sunos.c
test/: README  README.rst  _bsd.py  _freebsd.py  _linux.py  _openbsd.py  _osx.py  _posix.py  _sunos.py  _windows.py  bsd.py  test_bsd.py  test_linux.py  test_memory_leaks.py  test_psutil.py  test_windows.py  windows.py
tests/: README.md  README.rst  __init__.py  __main__.py  conftest.py  test_aix.py  test_bsd.py  test_changelog_bot.py  test_connections.py  test_contracts.py  test_docs.py  test_heap.py  test_linux.py  test_malloc.py  test_memleaks.py  test_memory_leaks.py  test_misc.py  test_osx.py  test_posix.py  test_process.py  test_process_all.py  test_scripts.py  test_sudo.py  test_sunos.py  test_system.py  test_testutils.py  test_type_hints.py  test_unicode.py  test_windows.py
thread-names-demo/: .gitignore  main.py
thread-names-demo/linux/: main.c
thread-names-demo/macosx/: main.c
thread-names-demo/windows/: main.c
(+309 files in other folders)
